--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@
   background: linear-gradient(180deg, rgba(0, 103, 179, 0.8) 0.52%, #5183B8 17.71%, #5183B8 55.73%);
   /* border: solid black; */
   height: 35vh;
-  margin-bottom: 12vh;
+  margin-bottom: 5vh;
   z-index: -1;
   grid-column-start: 1;
   grid-column-end: 4;
@@ -149,7 +149,7 @@
   background: linear-gradient(180deg, rgba(0, 103, 179, 0.8) 0.52%, #5183B8 17.71%, #5183B8 55.73%);
   /* border: solid black; */
   height: 35vh;
-  margin-bottom: 8vh;
+  margin-bottom: 5vh;
   z-index: -1;
   grid-column-start: 1;
   grid-column-end: 4;
@@ -165,6 +165,9 @@
 }
 
 .ppl{
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
   grid-row: 1/2;
 }
 
@@ -173,16 +176,11 @@
 }
 
 .image{
-  display: inline-block;
-  width: 15.63rem; 
-  height: 21rem;
+  position: relative;
 }
 
-.image{
-  position: relative;
-  max-width: 100%;
-  
-}
+
+
 .image img.colored{
   position: absolute;
   top: 0;
@@ -213,7 +211,7 @@
 }
 
 
-@media(max-width: 800px){
+@media(max-width: 1050px){
     .navigationbar{
       display: none;
     }
@@ -238,4 +236,11 @@
     .mdevelopers{
       display: grid;
     }
-}   
+} 
+
+#gauri{
+  
+   
+   margin-top: -25px;
+
+}
